# boilerplate-with-cursor

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.cursor/rules/: django.mdc
api/: serializers.py  urls.py  views.py
core/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/Layout/: DashboardLayout.tsx  Sidebar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/theme/: index.ts
